--- a/config/crd/bases/rabbitmq.coderanger.net_rabbitusers.yaml
+++ b/config/crd/bases/rabbitmq.coderanger.net_rabbitusers.yaml
@@ -15,6 +15,8 @@ spec:
     plural: rabbitusers
     singular: rabbituser
   scope: Namespaced
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       description: RabbitUser is the Schema for the rabbitusers API
