--- a/config/crd/bases/rabbitmq.coderanger.net_rabbitvhosts.yaml
+++ b/config/crd/bases/rabbitmq.coderanger.net_rabbitvhosts.yaml
@@ -15,6 +15,8 @@ spec:
     plural: rabbitvhosts
     singular: rabbitvhost
   scope: Namespaced
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       description: RabbitVhost is the Schema for the rabbitvhosts API
