--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,21 +2,17 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
+- bases/rabbitmq.coderanger.net_rabbitqueues.yaml
 - bases/rabbitmq.coderanger.net_rabbitusers.yaml
 - bases/rabbitmq.coderanger.net_rabbitvhosts.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
-# [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
-# patches here are for enabling the conversion webhook for each CRD
-#- patches/webhook_in_rabbitusers.yaml
-#- patches/webhook_in_rabbitvhosts.yaml
+- patches/webhook_in_rabbitusers.yaml
+- patches/webhook_in_rabbitvhosts.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
-
-# [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
-# patches here are for enabling the CA injection for each CRD
-#- patches/cainjection_in_rabbitusers.yaml
-#- patches/cainjection_in_rabbitvhosts.yaml
+- patches/cainjection_in_rabbitusers.yaml
+- patches/cainjection_in_rabbitvhosts.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
