--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -1,34 +1,30 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  labels:
-    control-plane: controller-manager
-  name: system
+  name: rabbitmq-operator
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: controller-manager
-  namespace: system
-  labels:
-    control-plane: controller-manager
+  name: rabbitmq-operator
+  namespace: rabbitmq-operator
 spec:
   selector:
     matchLabels:
-      control-plane: controller-manager
+      app: rabbitmq-operator
   replicas: 1
   template:
     metadata:
       labels:
-        control-plane: controller-manager
+        app: rabbitmq-operator
     spec:
       containers:
-      - command:
+      - name: manager
+        command:
         - /manager
         args:
         - --enable-leader-election
-        image: controller:latest
-        name: manager
+        image: ghcr.io/coderanger/rabbitmq-operator:latest
         resources:
           limits:
             cpu: 100m
