--- a/config/rbac/role_binding.yaml
+++ b/config/rbac/role_binding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: manager-rolebinding
+  name: rabbitmq-operator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: manager-role
+  name: rabbitmq-operator
 subjects:
 - kind: ServiceAccount
-  name: default
-  namespace: system
+  name: rabbitmq-operator
+  namespace: rabbitmq-operator
