--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -8,11 +8,11 @@ resources:
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
-- patches/webhook_in_rabbitusers.yaml
-- patches/webhook_in_rabbitvhosts.yaml
+# - patches/webhook_in_rabbitusers.yaml
+# - patches/webhook_in_rabbitvhosts.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
-- patches/cainjection_in_rabbitusers.yaml
-- patches/cainjection_in_rabbitvhosts.yaml
+# - patches/cainjection_in_rabbitusers.yaml
+# - patches/cainjection_in_rabbitvhosts.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
