--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -33,3 +33,4 @@ spec:
             cpu: 100m
             memory: 20Mi
       terminationGracePeriodSeconds: 10
+      serviceAccount: rabbitmq-operator
