🐛 Need access to secrets for the password.

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -69,3 +69,14 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - v1
+  resources:
+  - secrets
+  verbs:
+  - create
+  - get
+  - list
+  - patch
+  - update
+  - watch
