--- a/config/webhook/service.yaml
+++ b/config/webhook/service.yaml
@@ -1,12 +1,11 @@
-
 apiVersion: v1
 kind: Service
 metadata:
   name: webhook-service
-  namespace: system
+  namespace: rabbitmq-operator
 spec:
   ports:
     - port: 443
       targetPort: 9443
   selector:
-    control-plane: controller-manager
+    app: rabbitmq-operator
