--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -1,12 +1,15 @@
 
 ---
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   creationTimestamp: null
-  name: mutating-webhook-configuration
+  name: rabbitmq-operator
 webhooks:
-- clientConfig:
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
     caBundle: Cg==
     service:
       name: webhook-service
@@ -24,7 +27,11 @@ webhooks:
     - UPDATE
     resources:
     - rabbitqueues
-- clientConfig:
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
     caBundle: Cg==
     service:
       name: webhook-service
@@ -42,7 +49,11 @@ webhooks:
     - UPDATE
     resources:
     - rabbitusers
-- clientConfig:
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
     caBundle: Cg==
     service:
       name: webhook-service
@@ -60,7 +71,11 @@ webhooks:
     - UPDATE
     resources:
     - rabbitvhosts
-- clientConfig:
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
     caBundle: Cg==
     service:
       name: webhook-service
@@ -78,3 +93,4 @@ webhooks:
     - UPDATE
     resources:
     - rabbitvhosts
+  sideEffects: None
