🎨 Revert back to the stock kubebuilder deploy layout.
Maybe with KB3 plugins it will be more viable to change this, but for now too much of the structure is hardwired into controller-tools.

--- a/config/default/manager_webhook_patch.yaml
+++ b/config/default/manager_webhook_patch.yaml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: rabbitmq-operator
-  namespace: rabbitmq-operator
+  name: controller-manager
+  namespace: system
 spec:
   template:
     spec:
