--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
 - bases/rabbitmq.coderanger.net_rabbitvhosts.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
-patchesStrategicMerge:
+patchesStrategicMerge: []
 # - patches/webhook_in_rabbitusers.yaml
 # - patches/webhook_in_rabbitvhosts.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
