--- a/config/prometheus/monitor.yaml
+++ b/config/prometheus/monitor.yaml
@@ -12,6 +12,9 @@ spec:
     - path: /metrics
       port: https
       scheme: https
+      bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+      tlsConfig:
+        insecureSkipVerify: true # for now
   selector:
     matchLabels:
       control-plane: controller-manager
