✨ Support for writing the vhost for a user's connection string into the output secret.
This helps with the common case of plugging it into a config file or env var directly. It won't work with a cross-vhost user though, so you'll have to do that elsewhere. Really this is to work around an old bug in Keda 1.x where it doesn't understand env var interpolation (and even in 2.0, it doesn't support setting the vhost independently from the connection string).

--- a/config/crd/bases/rabbitmq.coderanger.net_rabbitusers.yaml
+++ b/config/crd/bases/rabbitmq.coderanger.net_rabbitusers.yaml
@@ -33,7 +33,6 @@ spec:
             description: RabbitUserSpec defines the desired state of RabbitUser
             properties:
               connection:
-                description: TODO TopicPermissions
                 properties:
                   host:
                     type: string
@@ -55,6 +54,9 @@ spec:
                   username:
                     type: string
                 type: object
+              outputVhost:omitempty:
+                description: TODO TopicPermissions
+                type: boolean
               permissions:
                 items:
                   description: RabbitmqPermission defines a single user permissions entry.
@@ -79,6 +81,8 @@ spec:
                 type: string
               username:
                 type: string
+            required:
+            - outputVhost:omitempty
             type: object
           status:
             description: RabbitUserStatus defines the observed state of RabbitUser
