--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
       - name: Install Kubebuilder
+        id: install-kubebuilder
         run: |
           os=$(go env GOOS)
           arch=$(go env GOARCH)
@@ -35,6 +36,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Docker Prep
+      id: prep
       run: |
         DOCKER_IMAGE=ghcr.io/coderanger/rabbitmq-operator
         VERSION=edge
