--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
         uses: golangci/golangci-lint-action@v2
         with:
           version: v1.33
+          args: --timeout=5m
 
   test:
     name: Test
