🐛 Try and make my RawExt uses actually function.
I think there must be a config difference between envtest and GKE because this works locally.

--- a/config/crd/bases/rabbitmq.coderanger.net_rabbitqueues.yaml
+++ b/config/crd/bases/rabbitmq.coderanger.net_rabbitqueues.yaml
@@ -34,6 +34,7 @@ spec:
             properties:
               arguments:
                 type: object
+                x-kubernetes-preserve-unknown-fields: true
               autoDelete:
                 type: boolean
               connection:
