🐛 Trying to work through reconcile loop issues.

--- a/templates/user_secret.yml
+++ b/templates/user_secret.yml
@@ -2,5 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Object.Name }}-rabbituser
+  annotations:
+    controller-utils/secretField: RABBIT_HOST
 data:
   RABBIT_HOST: {{ .Data.uri | toString | b64enc | quote }}
