✨ Major change: outputVhost is gone and the user secret keys have changed.
RABBIT_HOST is now RABBIT_URL. Rather than outputVhost changing that, if only one vhost is given then a RABBIT_URL_VHOST key will be created for it. Additionally RABBIT_USERNAME and RABBIT_HOSTNAME keys exist for things that don't use the URI syntax (or other silly tricks.

This would be a breaking change if anyone but me was using this.

--- a/templates/user_secret.yml
+++ b/templates/user_secret.yml
@@ -3,6 +3,11 @@ kind: Secret
 metadata:
   name: {{ .Object.Name }}-rabbituser
   annotations:
-    controller-utils/secretField: RABBIT_HOST
+    controller-utils/secretField: RABBIT_URL,RABBIT_URL_VHOST,RABBIT_USERNAME,RABBIT_HOSTNAME,RABBIT_PORT
 data:
-  RABBIT_HOST: {{ .Data.uri | toString | b64enc | quote }}
+  RABBIT_URL: {{ .Data.uri | toString | b64enc | quote }}
+  {{ if .Data.vhost }}
+  RABBIT_URL_VHOST: {{ printf "%s%s" ( .Data.uri | toString ) .Data.vhost | b64enc | quote }}
+  {{ end }}
+  RABBIT_USERNAME: {{ .Data.username | toString | b64enc | quote }}
+  RABBIT_HOSTNAME: {{ .Data.uri.Hostname | toString | b64enc | quote }}
